--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,18 @@
   margin: 40px auto;
   padding: 20px;
 }
+
+/* site previes / kust */
+.site_preview{
+	padding: 10px 16px;
+	margin: 20px 0;
+	border-bottom: 1px solid #fafafa;
+}
+.site-preview:hover {
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.site-preview h2 {
+  font-size: 20px;
+  color: #808080;
+  margin-bottom: 8px;
+}
