Able to Fetch Data from JSON File

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
   padding: 20px;
 }
 
-/* site previes / kust */
+/* site previews / list */
 .site_preview{
 	padding: 10px 16px;
 	margin: 20px 0;
