Task Page (HardCode)

--- a/src/index.css
+++ b/src/index.css
@@ -5,48 +5,292 @@
   font-family: "MADE TOMMY";
   color: #333;
 }
-.navbar {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  max-width: 600px;
-  margin: 0 auto;
-  border-bottom: 1px solid 	#000000;
-}
-.navbar h1 {
-  color: #808080;
-}
-.navbar .links {
-  margin-left: auto;
-}
-.navbar a {
-  margin-left: 16px;
-  text-decoration: none;
-  padding: 6px;
-}
-.navbar a:hover {
-  color: #f1356d;
-}
-.content {
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 20px;
+
+
+.panel-background {
+	position: absolute;
+	width: 200px;
+	height: 720px;
+	left: 0px;
+	top: 0px;
+
+	background: #1B1B24;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-/* site previews / list */
-.site_preview{
-	padding: 10px 16px;
-	margin: 20px 0;
-	border-bottom: 1px solid #fafafa;
+/* exath logo */
+.exath-logo{
+	position: absolute;
+	width: 46px;
+	height: 48px;
+	left: 75px;
+	top: 18px;
+
+	background: url(./assets/icons/exath_logo.png);
 }
-.site-preview:hover {
-  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+/* Tasks Panel */
+.task-panel{
+	position: absolute;
+	width: 184px;
+	height: 47.33px;
+	left: 8px;
+	top: 95.5px;
+	background: url(./assets/panels/panel.png);
+
+	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
+	border-radius: 10px;
 }
-.site-preview h2 {
-  font-size: 20px;
-  color: #808080;
-  margin-bottom: 8px;
+
+.task-logo{
+	position: absolute;
+	width: 20.11px;
+	height: 18.93px;
+	left: 18.05px;
+	top: 110px;
+	background: url(./assets/panels/task_logo.png);
 }
-.site-preview a{
-	text-decoration: none;
+
+.task-button{
+	position: absolute;
+	width: 75px;
+	height: 25px;
+	left: 48px;
+	top: 107px;
+
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 25px;
+	/* identical to box height */
+
+
+	color: #C4C4C4;
+	background-color: 'transparent';
+}
+
+/*Profiles Panel */
+.profile-panel{
+	position: absolute;
+	width: 184px;
+	height: 47.33px;
+	left: 8px;
+	top: 160.58px;
+	background: url(./assets/panels/panel.png);
+
+	opacity: 0.4;
+	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
+	border-radius: 10px;
+}
+.profile-logo{
+	position: absolute;
+	width: 18.31px;
+	height: 18.93px;
+	left: 21.05px;
+	top: 174.78px;
+	background: url(./assets/panels/profile_logo.png);
+
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+	transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+.profile-button
+{
+	position: absolute;
+	width: 67px;
+	height: 25px;
+	left: 48px;
+	top: 172px;
+
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 25px;
+	/* identical to box height */
+	color: #C4C4C4;
+
+}
+
+/*Proxies Panel */
+.proxies-panel{
+	position: absolute;
+	width: 184px;
+	height: 47.33px;
+	left: 8px;
+	top: 225.67px;
+	background: url(./assets/panels/panel.png);
+
+	opacity: 0.4;
+	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
+	border-radius: 10px;
+}
+.proxies-logo{
+	position: absolute;
+	width: 20.11px;
+	height: 18.93px;
+	left: 19.06px;
+	top: 239.87px;
+	background: url(./assets/panels/proxies_logo.png);
+
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+	
+}
+.proxies-button
+{
+	position: absolute;
+	width: 67px;
+	height: 25px;
+	left: 48px;
+	top: 237px;
+
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 25px;
+	/* identical to box height */
+	color: #C4C4C4;
+
+}
+
+/*Captcha Panel */
+.captcha-panel{
+	position: absolute;
+	width: 184px;
+	height: 47.33px;
+	left: 8px;
+	top: 290.75px;
+	background: url(./assets/panels/panel.png);
+
+	opacity: 0.4;
+	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
+	border-radius: 10px;
+}
+.captcha-logo{
+	position: absolute;
+	width: 18.93px;
+	height: 18.93px;
+	left: 19px;
+	top: 305.91px;
+	background: url(./assets/panels/captcha_logo.png);
+
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); 
+}
+.captcha-button
+{
+	position: absolute;
+	width: 78px;
+	height: 25px;
+	left: 48px;
+	top: 302.91px;
+
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 25px;
+	/* identical to box height */
+	color: #C4C4C4;
+
+}
+
+/*Dashboard Panel */
+.dashboard-panel{
+	position: absolute;
+	width: 184px;
+	height: 47.33px;
+	left: 8px;
+	top: 355.83px;
+	background: url(./assets/panels/panel.png);
+
+	opacity: 0.4;
+	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
+	border-radius: 10px;
+}
+.dashboard-logo{
+	position: absolute;
+	width: 16.09px;
+	height: 18.93px;
+	left: 21.07px;
+	top: 370.03px;
+	background: url(./assets/panels/dashboard_logo.png);
+
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.dashboard-button
+{
+	position: absolute;
+	width: 100px;
+	height: 25px;
+	left: 48px;
+	top: 367.08px;
+
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 25px;
+	/* identical to box height */
+	color: #C4C4C4;
+
+}
+
+/*Settings Panel */
+.settings-panel{
+	position: absolute;
+	width: 184px;
+	height: 47.33px;
+	left: 8px;
+	top: 420.91px;
+	background: url(./assets/panels/panel.png);
+
+	opacity: 0.4;
+	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
+	border-radius: 10px;
+}
+.settings-logo{
+	position: absolute;
+	width:  16.09px;
+	height: 18.93px;
+	left: 21.07px;
+	top: 435.11px;
+	background: url(./assets/panels/settings_logo.png);
+
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.settings-button
+{
+	position: absolute;
+	width: 75px;
+	height: 25px;
+	left: 48px;
+	top: 431.99px;
+
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 25px;
+	/* identical to box height */
+	color: #C4C4C4;
+
+} 
+
+/* Version Number */
+.version-number{
+	position: absolute;
+	width: 36px;
+	height: 22px;
+	left: 19px;
+	top: 689px;
+
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 22px;
+
+	color: #C4C4C4;
+
+	opacity: 0.5;
 }
