--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 	height: 50px;
 	left: 80px;
 	top: 141px;
-	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.45));
+	fter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.45));
 
 	background: #3D4158;
 	border-radius: 20px;
@@ -43,128 +43,4 @@
 	top: 240px;
 	background: url(./assets/icons/Close.png);
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.45));
-}
-
-.panel-background {
-	position: absolute;
-	width: 200px;
-	height: 720px;
-	left: 0px;
-	top: 0px;
-
-	background: #1B1B24;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-/* exath logo */
-.exath-logo{
-	position: absolute;
-	width: 46px;
-	height: 48px;
-	left: 75px;
-	top: 18px;
-
-	background: url(./assets/icons/exath_logo.png);
-}
-/* Tasks Panel */
-.task-panel{
-	position: absolute;
-	width: 184px;
-	height: 47.33px;
-	left: 8px;
-	top: 95.5px;
-	background: url(./assets/icons/task_panel.png);
-
-	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
-	border-radius: 10px;
-}
-
-/*Profiles Panel */
-.profile-panel{
-	position: absolute;
-	width: 184px;
-	height: 47.33px;
-	left: 8px;
-	top: 160.58px;
-	background: url(./assets/icons/profile_panel.png);
-
-	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
-	border-radius: 10px;
-}
-
-
-/*Proxies Panel */
-.proxies-panel{
-	position: absolute;
-	width: 184px;
-	height: 47.33px;
-	left: 8px;
-	top: 225.67px;
-	background: url(./assets/icons/proxies_panel.png);
-
-	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
-	border-radius: 10px;
-}
-
-
-/*Captcha Panel */
-.captcha-panel{
-	position: absolute;
-	width: 184px;
-	height: 47.33px;
-	left: 8px;
-	top: 290.75px;
-	background: url(./assets/icons/captcha_panel.png);
-
-	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
-	border-radius: 10px;
-}
-
-
-/*Dashboard Panel */
-.dashboard-panel{
-	position: absolute;
-	width: 184px;
-	height: 47.33px;
-	left: 8px;
-	top: 355.83px;
-	background: url(./assets/icons/dashboard_panel.png);
-
-
-	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
-	border-radius: 10px;
-}
-
-
-/*Settings Panel */
-.settings-panel{
-	position: absolute;
-	width: 184px;
-	height: 47.33px;
-	left: 8px;
-	top: 420.91px;
-	background: url(./assets/icons/settings_panel.png);
-
-	
-	filter: drop-shadow(5px 9px 5px rgba(0, 0, 0, 0.25));
-	border-radius: 10px;
-}
-
-/* Version Number */
-.version-number{
-	position: absolute;
-	width: 36px;
-	height: 22px;
-	left: 19px;
-	top: 689px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 18px;
-	line-height: 22px;
-
-	color: #C4C4C4;
-
-	opacity: 0.5;
 }
