--- a/src/css/Captcha.css
+++ b/src/css/Captcha.css
@@ -1,189 +1,51 @@
+.captcha-container{
+	width: 1080px;
+}
+.captcha-container h1 p{
+	color: #C4C4C4;
+}
 
-.rectangle_background{
-	position: absolute;
+.captcha-container .page-wrapper{
 	width: 1040px;
-	height: 680px;
-	left: 220px;
-	top: 20px;
-
+	height: 100%;
 	background: #2B303C;
 	border-radius: 25px;
 }
-.create{
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	left: 970px;
-	top: 20px;
 
-	background: url(../assets/icons/create_task_logo.png)
+.left-control-panel .icons-wrapper {
+	list-style-type: none;
 }
 
-.captcha_heading{
-	/* Panel Background */
-	position: absolute;
+.left-control-panel .icons-wrapper .icon {
+	display: inline;
+	padding-right: 10px;
+}
+
+.right-control-panel .icons-wrapper {
+	list-style-type: none;
+}
+
+.right-control-panel .icons-wrapper .icon {
+	display: inline;
+	padding-right: 10px;
+}
+
+.captcha-container .table-heading{
 	width: 1020px;
 	height: 43px;
-	left: 230px;
-	top: 101px;
-
 	background: #1B1B24;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
-
 }
-.captcha_harvester{
-	position: absolute;
-	width: 88px;
-	height: 24px;
-	left: 59px;
-	top: 10px;
-
+.captcha-container .table-heading .headings{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 20px;
+	font-size: 20px !important;
 	line-height: 24px;
-	text-align: center;
+	padding-top: 7%;
 
 	color: #C4C4C4;
-
-}
-.captcha_email{
-	position: absolute;
-	width: 47px;
-	height: 24px;
-	left: 315px;
-	top: 10px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 20px; 
-	line-height: 24px;
-	display: flex;
-	align-items: center;
-
-	color: #C4C4C4;
-}
-.captcha_proxy{
-	position: absolute;
-	width: 51px;
-	height: 24px;
-	left: 602px;
-	top: 10px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 20px;
-	line-height: 24px;
-	display: flex;
-	align-items: center;
-
-	color: #C4C4C4;
-}
-.actions{
-	position: absolute;
-	width: 70.33px;
-	height: 25.91px;
-	left: 907px;
-	top: 10px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 20px;
-	line-height: 24px;
-
-	color: #C4C4C4;
-}
-.captcha_table{
-	position: absolute;
-	width: 1020px;
-	height: 41px;
-	left: 230px;
-	top: 156px;
-
-	background: #232530;
-	border-radius: 15px;
-}
-.harvester{
-	position: absolute;
-	width: 207px;
-	height: 17px;
-	left: 0px;
-	top: 10px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
-
-	color: #C4C4C4;
-}
-.email{
-	position: absolute;
-	width: 223px;
-	height: 17px;
-	left: 227px;
-	top: 10px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
-
-	color: #C4C4C4;
-}
-.proxy{
-	position: absolute;
-	width: 276px;
-	height: 17px;
-	left: 490px;
-	top: 10px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
-
-	color: #C4C4C4;
-}
-
-.external_link{
-	position: absolute;
-	width: 16.37px;
-	height: 16.37px;
-	left: 906px;
-	top: 11px;
-
-	background: url(../assets/icons/external_link_logo.png)
-}
-.table_edit{
-	position: absolute;
-	width: 18.35px;
-	height: 16.31px;
-	left: 933px;
-	top: 11px;
-
-	background: url(../assets/icons/table_edit.png)
-}
-.table_delete{
-	position: absolute;
-	width: 14.27px;
-	height: 16.31px;
-	left: 965px;
-	top: 11px;
-
-	background: url(../assets/icons/table_delete.png)
-
 }
 
 .captcha_harvester_button{
