--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -1,248 +1,60 @@
- @import url('http://db.onlinewebfonts.com/c/f608cf0f495fc936317f6ba9637d3b7e?family=MADE+TOMMY');
-/* base styles */
-* {
-  margin: 0;
-  font-family: "MADE TOMMY";
-  color: #333;
+.profile-container{
+	width: 1080px;
+}
+.profile-container h1 p{
+	color: #C4C4C4;
 }
 
-.rectangle_background{
-	position: absolute;
+.profile-container .page-wrapper{
 	width: 1040px;
-	height: 680px;
-	left: 220px;
-	top: 20px;
-
+	height: 100%;
 	background: #2B303C;
 	border-radius: 25px;
 }
 
-.export{
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	left: 40px;
-	top: 20px;
-
-	background: url(../assets/icons/export_logo.png)
-
+.left-control-panel .icons-wrapper {
+	list-style-type: none;
 }
 
-.import{
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	left:  80px;
-	top: 20px;
-
-	background: url(../assets/icons/import_logo.png)
-
+.left-control-panel .icons-wrapper .icon {
+	display: inline;
+	padding-right: 10px;
 }
 
-.create{
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	left: 970px;
-	top: 20px;
-
-	background: url(../assets/icons/create_task_logo.png)
+.right-control-panel .icons-wrapper {
+	list-style-type: none;
 }
 
-.profile_heading{
-	/* Panel Background */
-	position: absolute;
+.right-control-panel .icons-wrapper .icon {
+	display: inline;
+	padding-right: 10px;
+}
+
+.profile-container .table-heading{
 	width: 1020px;
 	height: 43px;
-	left: 230px;
-	top: 101px;
-
 	background: #1B1B24;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
-
 }
-.profile_name{
-	/* Profile Name */
-	position: absolute;
-	width: 117px;
-	height: 24px;
-	left: 45px;
-	top: 10px;
-
+.profile-container .table-heading .headings{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 20px;
+	font-size: 20px !important;
 	line-height: 24px;
-	text-align: center;
+	padding-top: 7%;
 
 	color: #C4C4C4;
 }
-.profile_email{
-	position: absolute;
-	width: 47px;
-	height: 24px;
-	left: 315px;
-	top: 11px;
 
+.profile-container .table-heading .profile-name{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 20px;
+	font-size: 20px !important;
 	line-height: 24px;
-	display: flex;
-	align-items: center;
+	padding-top: 3%;
 
 	color: #C4C4C4;
-
-}
-.profile_card_number{
-	/* Card Number */
-
-
-	position: absolute;
-	width: 124px;
-	height: 24px;
-	left: 489px;
-	top: 11px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 20px;
-	line-height: 24px;
-	display: flex;
-	align-items: center;
-
-	color: #C4C4C4;
-}
-.profile_shipping_name{
-	position: absolute;
-	width: 139px;
-	height: 24px;
-	left: 695.5px;
-	top: 11px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 20px;
-	line-height: 24px;
-	display: flex;
-	align-items: center;
-
-	color: #C4C4C4;
-}
-.actions{
-	position: absolute;
-	width: 70.33px;
-	height: 25.91px;
-	left: 907px;
-	top: 11px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 20px;
-	line-height: 24px;
-
-	color: #C4C4C4;
-}
-
-.profile_table{
-	position: absolute;
-	width: 1020px;
-	height: 41px;
-	left: 230px;
-	top: 156px;
-
-	background: #232530;
-	border-radius: 15px;
-}
-.name{
-	position: absolute;
-	width: 207px;
-	height: 17px;
-	left: 0px;
-	top: 10px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
-
-	color: #C4C4C4;
-}
-.email{
-	position: absolute;
-	width: 223px;
-	height: 17px;
-	left: 230px;
-	top: 11px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
-
-	color: #C4C4C4;
-}
-.card_number{
-	position: absolute;
-	width: 31px;
-	height: 17px;
-	left: 533px;
-	top: 11px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
-
-	color: #C4C4C4;
-
-}
-.shipping_name{
-	position: absolute;
-	width: 68px;
-	height: 17px;
-	left: 733px;
-	top: 11px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
-
-	color: #C4C4C4;
-
-
-}
-.table_edit{
-	position: absolute;
-	width: 18.35px;
-	height: 16.31px;
-	left: 933px;
-	top: 11px;
-
-	background: url(../assets/icons/table_edit.png)
-}
-.table_delete{
-	position: absolute;
-	width: 14.27px;
-	height: 16.31px;
-	left: 965px;
-	top: 11px;
-
-	background: url(../assets/icons/table_delete.png)
-
 }
