--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -1,5 +1,7 @@
 .tasks-container {
-	width: 1080px;
+	width: 100%;
+	height: 100vh;
+	padding-left: 10px;
 }
 
 .tasks-container h1 p {
@@ -7,7 +9,7 @@
 }
 
 .tasks-container .control-panel-wrapper {
-	width: 1060px;
+	width: auto;
 	height: 110px;
 	background: #1B1B24;
 	border-radius: 25px;
@@ -47,17 +49,16 @@
 }
 
 .tasks-container .table-heading{
-	width: 1060px;
-	height: 570px;
-
+	height: 540px;
 	background: #2B303C;
 	border-radius: 25px;
+	padding: 10px;
+	margin-top: 10px;
 }
 
 .tasks-container .table-heading-wrapper{
-	width: 1020px;
+	width: 100%;
 	height: 43px;
-
 	background: #1B1B24;
 	border-radius: 15px;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
