--- a/src/css/Captcha.css
+++ b/src/css/Captcha.css
@@ -1,12 +1,13 @@
 .captcha-container{
-	width: 1080px;
+	width: 100%;
+	height: 100vh;
+	padding: 10px;
 }
 .captcha-container h1 p{
 	color: #C4C4C4;
 }
 
 .captcha-container .page-wrapper{
-	width: 1040px;
 	height: 100%;
 	background: #2B303C;
 	border-radius: 25px;
@@ -44,22 +45,6 @@
 	font-size: 20px !important;
 	line-height: 24px;
 	padding-top: 7%;
-
-	color: #C4C4C4;
-}
-
-.captcha_harvester_button{
-	position: absolute;
-	
-	left: 250px;
-	top: 600px;
-
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 30px;
-	line-height: 17px;
-	text-align: center;
 
 	color: #C4C4C4;
 }
