--- a/src/css/Proxies.css
+++ b/src/css/Proxies.css
@@ -1,12 +1,13 @@
 .proxies-container{
-	width: 1080px;
+	width: 100%;
+	height: 100vh;
+	padding: 10px;
 }
 .proxies-container h1 p{
 	color: #C4C4C4;
 }
 
 .proxies-container .page-wrapper{
-	width: 1040px;
 	height: 100%;
 	background: #2B303C;
 	border-radius: 25px;
