--- a/src/css/Captcha.css
+++ b/src/css/Captcha.css
@@ -48,3 +48,32 @@
 
 	color: #C4C4C4;
 }
+
+.captcha-container .individual-captcha{
+	width: 1020px;
+	height: 41px;
+
+	background: #232530;
+	border-radius: 15px;
+	padding: 10px;
+}
+.captcha-container .individual-captcha .headings{
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 17px;
+	text-align: center;
+	margin-right: 10px;
+
+	color: #C4C4C4;
+
+}
+.captcha-container .individual-captcha .icons-wrapper{
+	list-style-type: none;
+}
+
+.captcha-container .individual-captcha .icons-wrapper .icon{
+	display: inline;
+	padding-right: 10px;
+}
