--- a/src/css/Proxies.css
+++ b/src/css/Proxies.css
@@ -49,3 +49,32 @@
 	color: #C4C4C4;
 }
 
+.proxies-container .individual-proxy{
+	width: 1020px;
+	height: 41px;
+
+	background: #232530;
+	border-radius: 15px;
+	padding: 10px;
+}
+.proxies-container .individual-proxy .headings{
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 17px;
+	text-align: center;
+	margin-right: 10px;
+
+	color: #C4C4C4;
+
+}
+.proxies-container .individual-proxy .icons-wrapper{
+	list-style-type: none;
+}
+
+.proxies-container .individual-proxy .icons-wrapper .icon{
+	display: inline;
+	padding-right: 10px;
+}
+
