--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -70,4 +70,40 @@
 	font-size: 20px !important;
 
 	color: #C4C4C4;
-}	
+}
+.tasks-container .individual-task-wrapper{
+	width: 100%;
+	height: 41px;
+
+	background: #232530;
+	border-radius: 15px;
+}
+.tasks-container .individual-task-wrapper .individual-task  .headings{
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 10px!important; 
+	line-height: 17px;
+
+	color: #C4C4C4;
+}
+
+.tasks-container .individual-task-wrapper .individual-task  .headings-other{
+	font-family: MADE TOMMY;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px!important; 
+	line-height: 17px;
+	padding-top: 12px;
+	margin-right: 30px;
+
+	color: #C4C4C4;
+}
+.tasks-container .individual-task-wrapper .individual-task .icons-wrapper{
+	list-style-type: none;
+}
+
+.tasks-container .individual-task-wrapper .individual-task .icons-wrapper .icon{
+	display: inline;
+	padding-right: 10px;
+}
