--- a/src/css/CreateCaptcha.css
+++ b/src/css/CreateCaptcha.css
@@ -1,18 +1,13 @@
-.rectangle_background1{
-	position: relative;
+.create-captcha-container{
 	width: 567px;
 	height: 240px;
-	left: 330px;
-	top: 180px;
-
+	top: 50%;
 	background: #21232E;
 	border-radius: 10px;
+	margin: auto;
 }
-.create_captcha{
-	position: absolute;
-	left: 21px;
-	top: 11px;
 
+.create-captcha-container .cch{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
@@ -22,60 +17,38 @@
 
 	color: #C4C4C4;
 }
-.email_captcha{
-	position: absolute;
-	width: 525px;
-	height: 30px;
-	left: 21px;
-	top: 56px;
 
-	background: #3D4158;
-	border-radius: 10px;
-	
-}
-.proxy_captcha{
+.create-captcha-container .textarea{
 	position: absolute;
 	width: 525px;
 	height: 30px;
-	left: 21px;
-	top: 106px;
 
 	background: #3D4158;
 	border-radius: 10px;
 }
-.harvester_name{
+
+.create-captcha-container .textarea-hn{
 	position: absolute;
 	width: 180px;
 	height: 30px;
-	left: 21px;
-	top: 169px;
 
 	background: #3D4158;
 	border-radius: 10px;
 }
 
-.exit_cc{
-	position: absolute;
-	width: 55px;
-	height: 26px;
-	left: 376px;
-	top: 191px;
-
+.create-captcha-container .textarea .text{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 20px;
-	line-height: 25px;
+	font-size: 16px;
+	line-height: 20px;
+	/* identical to box height */
+
 
 	color: #C4C4C4;
 }
-.create_cc{
-	position: absolute;
-	width: 65px;
-	height: 26px;
-	left: 481px;
-	top: 191px;
 
+.create-captcha-container .routing{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
@@ -83,4 +56,6 @@
 	line-height: 25px;
 
 	color: #C4C4C4;
+	color: inherit;
+    text-decoration: inherit;
 }
