--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -2,6 +2,8 @@
 	width: 100%;
 	height: 100vh;
 	padding-left: 10px;
+	margin-right:10px;
+	margin-top:10px
 }
 
 .tasks-container h1 p {
@@ -21,6 +23,7 @@
 	font-weight: normal;
 	font-size: 30px !important;
 	letter-spacing: 0.03em;
+	padding-top: 5px;
 }
 
 .tasks-container .control-panel-wrapper .left-control-panel .clock {
@@ -41,6 +44,7 @@
 
 .right-control-panel .icons-wrapper {
 	list-style-type: none;
+	
 }
 
 .right-control-panel .icons-wrapper .icon {
@@ -49,11 +53,12 @@
 }
 
 .tasks-container .table-heading{
-	height: 540px;
+	height: 605px;
 	background: #2B303C;
 	border-radius: 25px;
 	padding: 10px;
 	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .tasks-container .table-heading-wrapper{
